[package]
name = "reth-ubt-exex"
version = "0.1.0"
edition = "2021"
description = "Reth ExEx plugin for maintaining UBT (EIP-7864 Unified Binary Tree) state"
license = "MIT OR Apache-2.0"

[[bin]]
name = "reth-ubt"
path = "src/main.rs"

[dependencies]
# UBT implementation
ubt = { path = "../ubt", features = ["serde"] }

# Reth dependencies (path to local reth-ubt checkout)
reth-ethereum = { path = "../reth-ubt/crates/ethereum/reth", features = ["full", "cli"] }
reth-exex = { path = "../reth-ubt/crates/exex/exex" }
reth-exex-types = { path = "../reth-ubt/crates/exex/types" }
reth-execution-types = { path = "../reth-ubt/crates/evm/execution-types" }
reth-tracing = { path = "../reth-ubt/crates/tracing" }
reth-node-api = { path = "../reth-ubt/crates/node/api" }
reth-primitives-traits = { path = "../reth-ubt/crates/primitives-traits" }

# Alloy primitives
alloy-primitives = "1"
alloy-eips = "1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI (used by reth-ethereum)
clap = { version = "4", features = ["derive"] }

# Error handling
eyre = "0.6"

# Serialization (for persistence)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database (MDBX for tree persistence)
reth-db = { path = "../reth-ubt/crates/storage/db" }
reth-libmdbx = { path = "../reth-ubt/crates/storage/libmdbx-rs" }

# Logging
tracing = "0.1"
