[package]
name = "ubt-exex"
version = "0.1.0"
edition = "2021"
description = "Reth ExEx plugin for maintaining UBT (EIP-7864 Unified Binary Tree) state"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ubt-exex"
path = "src/main.rs"

[dependencies]
# UBT implementation
# TODO: Update to specific release tag once available
ubt = { git = "https://github.com/igor53627/ubt-rs", branch = "main", features = ["serde", "parallel"] }

# Reth dependencies
# Using tag v1.9.3 for stable API
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", features = ["full", "cli"] }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-exex-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
mdbx-rs = { git = "https://github.com/igor53627/mdbx-rs", branch = "main", default-features = false }

# Alloy primitives
alloy-primitives = "1"
alloy-eips = "1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI (used by reth-ethereum)
clap = { version = "4", features = ["derive"] }

# Error handling
eyre = "0.6"
thiserror = "1.0"

# RPC
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
async-trait = "0.1"
tower = "0.4"

# Serialization (for persistence)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Logging
tracing = "0.1"

# Metrics
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
metrics = "0.24"
nomt = "1.0.3"
redb = "2.1"

[dev-dependencies]
tempfile = "3"
proptest = "1.0"
criterion = "0.5"

[[bench]]
name = "mdbx"
harness = false
